# FASTApiMongoDB

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
src/: enums.py  main.py  models.py  script.py  validation_service.py
src/core/: __init__.py  mongo.py  settings.py
