[tool.poetry]
name = "mongo-forms"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
motor = "^3.3.2"
pydantic-settings = "^2.1.0"
pydantic = {extras = ["email"], version = "^2.5.1"}
phonenumbers = "^8.13.25"
httpx = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
